--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </section>
     <section class="section is-medium">
         <h1 class="title">그림영역</h1>
-        <a class="button">시작하기</a>
+        <a class="button" href="/login/form">시작하기</a>
 
     </section>
     <footer class="footer">
