--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>어디냥 | 회원가입화면</title>
+
+    <!-- CSS library Bulma -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -14,12 +20,12 @@
             <div class="container">
                 <div class="columns is-centered">
                     <div class="column is-5-tablet is-4-desktop is-3-widescreen">
-                        <form action="" class="box">
+                        <form class="box">
                             <!-- 아이디 -->
                             <div class="field">
                                 <label for="" class="label">아이디</label>
                                 <div class="control has-icons-left">
-                                    <input type="text" placeholder="예: meow1234" class="input" required>
+                                    <input name="id" type="text" placeholder="예: meow1234" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -31,7 +37,7 @@
                             <div class="field">
                                 <label for="" class="label">이름</label>
                                 <div class="control has-icons-left">
-                                    <input type="text" placeholder="예: 김냐옹" class="input" required>
+                                    <input name="name" type="text" placeholder="예: 김냐옹" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -42,7 +48,7 @@
                                 <label for="" class="label">비밀번호</label>
                                 <div class="control has-icons-left">
 
-                                    <input type="password" placeholder="*******" class="input" required>
+                                    <input name="password" type="password" placeholder="*******" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -52,7 +58,7 @@
                             <div class="field">
                                 <label for="" class="label">비밀번호확인</label>
                                 <div class="control has-icons-left">
-                                    <input type="password" placeholder="*******" class="input" required>
+                                    <input type="password" placeholder="*******" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -62,7 +68,7 @@
                             <div class="field">
                                 <label for="" class="label">이메일</label>
                                 <div class="control has-icons-left">
-                                    <input type="email" placeholder="e.g. meow@gmail.com" class="input" required>
+                                    <input name="email" type="email" placeholder="e.g. meow@gmail.com" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-envelope"></i>
                                     </span>
@@ -72,7 +78,7 @@
                             <div class="field">
                                 <label for="" class="label">전화번호</label>
                                 <div class="control has-icons-left">
-                                    <input type="email" placeholder="e.g. : 010-1234-5678" class="input" required>
+                                    <input name="phone" type="email" placeholder="e.g. : 010-1234-5678" class="input" >
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-envelope"></i>
                                     </span>
@@ -80,10 +86,10 @@
                             </div>
                             <!-- 회원가입 버튼, 되돌아가기 버튼 -->
                             <div class="field">
-                                <button class="button is-success">
+                                <button type="button" class="button is-success" id="signup-btn">
                                     가입하기
                                 </button>
-                                <button class="button is-success">
+                                <button type="button" class="button is-success" id="cancel-btn">
                                     돌아가기
                                 </button>
                             </div>
@@ -104,5 +110,31 @@
         </div>
     </footer>
 </body>
+<script>
+    const signupBtn = document.querySelector('#signup-btn');
+    signupBtn.addEventListener('click', () => {
+        // todo: bulma 기본 유효성 외 앞단 유효성 검사 필요
+        const id = $('input[name="id"]').val();
+        const name = $('input[name="name"]').val();
+        const password = $('input[name="password"]').val();
+        const email = $('input[name="email"]').val();
+        const phone = $('input[name="phone"]').val();
+            
+        $.ajax({
+            type: "POST",
+            url: "/signup",
+            data: {id, name, password, email, phone},
+            success: function(response) {
+                if (response['status'] !== 'success') {
+                    alert('회원가입에 실패하였습니다.')
+                    return;
+                }
+                location.href = '/login'
+            },
+        })
+
+    });
+    
+</script>
 
 </html>
