--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -9,6 +9,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
   <title>어디냥 | 로그인</title>
+
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      crossorigin="anonymous"></script>
+
+  <script>
+    function signIn(){
+      let id = $("#id").val();
+      let pw = $("#pw").val();
+
+      $.ajax({
+          type : "POST",
+          url : "/signup",
+          data: {"id":id,"pw":pw},
+          success: function(response){
+              if(response["result"]=="success"){
+                  window.location.replace("/");
+              }
+              else{
+                  alert("로그인 실패");
+              }
+          }
+      })
+    }
+  </script>
+
 </head>
 
 <body>
@@ -29,7 +56,7 @@
       <div class="field">
         <label class="label">I.D</label>
         <div class="control">
-          <input class="input" type="text" placeholder="누구냐옹">
+          <input class="input" id ="id" type="text" placeholder="누구냐옹">
         </div>
       </div>
 
@@ -37,17 +64,17 @@
       <div class="field">
         <label class="label">P.W</label>
         <div class="control has-icons-left has-icons-right">
-          <input class="input is-success" type="password" placeholder="비밀번호를 대랴옹">
+          <input class="input is-success" id="pw" type="password" placeholder="비밀번호를 대랴옹">
         </div>
       </div>
 
       <!-- 로그인 버튼 + 회원가입 버튼 -->
       <div class="field is-grouped">
         <div class="control">
-          <button class="button is-link">로그인</button>
+          <button class="button is-link" onclick="signIn()">로그인</button>
         </div>
         <div class="control">
-          <button class="button is-link is-light">회원가입</button>
+          <button class="button is-link is-light" onclick="location.href='/signup/form'">회원가입</button>
         </div>
       </div>
 
