signIn function api호출 오류 수정

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -22,7 +22,7 @@
 
       $.ajax({
           type : "POST",
-          url : "/signup",
+          url : "/login",
           data: {"id":id,"pw":pw},
           success: function(response){
               if(response["result"]=="success"){
