--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -25,8 +25,8 @@
           url : "/login",
           data: {"id":id,"pw":pw},
           success: function(response){
-              if(response["result"]=="success"){
-                  window.location.replace("/");
+              if(response["status"]=="success"){
+                  window.location.replace("/state/list");
               }
               else{
                   alert("로그인 실패");
