--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -17,7 +17,7 @@
             <!-- 프로필 이미지 -->
             <div class="column">
                 <figure class="image is-96x96">
-                    <img class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
+                    <img class="is-rounded" src= {{ data.my_profile.cat_image_url }} >
                 </figure>
             </div>
             <div class="column is-two-thirds tags are-normal">
@@ -25,7 +25,7 @@
                 <div class="block">
                     <div class="tags has-addons">
                         <span class="tag is-dark">이름</span>
-                        <span class="tag is-info">이름을 쓰는 공간 -> jinja 로 처리</span>
+                        <span class="tag is-info">{{ data.my_profile.name }}</span>
                     </div>
                 </div>
 
@@ -33,7 +33,7 @@
                 <div class="control">
                     <div class="tags has-addons">
                         <span class="tag is-dark">상태</span>
-                        <span class="tag is-info">상태를 쓰는 공간 -> jinja 로 처리</span>
+                        <span class="tag is-info"> {{ data.my_profile.location }} </span>
                     </div>
                 </div>
             </div>
