--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -17,7 +17,7 @@
             <!-- 프로필 이미지 -->
             <div class="column">
                 <figure class="image is-96x96">
-                    <img class="is-rounded" src= {{ data.my_profile.cat_image_url }} >
+                    <img class="is-rounded" style="width: 96px; height:96px;" src= {{ data.my_profile.cat_image_url }} >
                 </figure>
             </div>
             <div class="column is-two-thirds tags are-normal">
