--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -10,6 +10,46 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     crossorigin="anonymous"></script>
+    <script>
+        function change_profile(){
+            $.ajax({
+                type : "GET",
+                url : "https://api.thecatapi.com/v1/images/search",
+                data: {},
+                success: function(response){
+                    let img_url = response[0]["url"];
+                    $("#profile_img").attr("src",img_url);
+                }
+            })
+        }
+
+        function change(){
+            let loc = $("#loc_select option:selected").text();
+            console.log(loc);
+
+            let img_url = $("#profile_img").attr("src");
+
+            $.ajax({
+                type : "POST",
+                url : "/state/update",
+                data: {"location":loc,"cat_image_url":img_url},
+                beforeSend: function(xhr) {
+                    const token = localStorage.getItem('access_token');
+                    xhr.setRequestHeader('Authorization', 'Bearer ' + token);
+                },
+                success: function(response){
+                    alert("프로필 수정완료!");
+                },
+                error: function(response) {
+                    if (response.status == '422') {
+                            alert('로그인이 필요합니다.');
+                            location.href = '/login/form';
+                    }
+                }
+            })
+            
+        }
+    </script>
 
 </head>
 
