--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -175,7 +175,7 @@
                 <!-- 프로필 이미지 -->
                 <div class="column">
                     <figure class="image is-96x96">
-                        <img class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
+                        <img style="width: 96px;height: 96px;" id="profile_img" class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
                     </figure>
                 </div>
                 <div class="column is-two-thirds tags are-normal">
@@ -183,7 +183,7 @@
                     <div class="block">
                         <div class="tags has-addons">
                             <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">김고양</span>
+                            <span class="tag is-info">{{data.my_profile.name}}</span>
                         </div>
                     </div>
 
@@ -191,7 +191,7 @@
                     <div class="control">
                         <div class="tags has-addons">
                             <span class="tag is-dark">위치</span>
-                            <span class="tag is-info">강의실</span>
+                            <span class="tag is-info">{{data.my_profile.location}}</span>
                         </div>
                     </div>
                 </div>
@@ -205,13 +205,13 @@
                 <div>
                     <span class="tag is-info">나의 위치를 알려줘!</span>
                     <div class="select">
-                        <select>
-                            <option>강의실</option>
-                            <option>라운지</option>
-                            <option>기숙사</option>
-                            <option>식당</option>
-                            <option>세탁실</option>
-                            <option>외출중</option>
+                        <select id="loc_select">
+                            <option value ="classroom">강의실</option>
+                            <option value="lounge">라운지</option>
+                            <option value="dormitory">기숙사</option>
+                            <option value="restaurant">식당</option>
+                            <option value="laundry_room">세탁실</option>
+                            <option value="out">외출중</option>
                         </select>
                     </div>
                 </div>
@@ -219,12 +219,12 @@
                 <div>
                     <!-- 랜덤고양이 + 랜던고양이 뽑기 버튼 -->
                     <span class="tag is-info">프로필 바꾸기</span>
-                    <button class="button is-success">고양이를 바꿔라!</button>
+                    <button class="button is-success" onclick ="change_profile()">고양이를 바꿔라!</button>
                 </div>
             </div>
         </section>
         <footer class="modal-card-foot">
-            <button class="button is-success">수정하기</button>
+            <button class="button is-success" onclick = "change()">수정하기</button>
             <button class="button">취소하기</button>
         </footer>
     </div>
