--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -52,14 +52,15 @@
 <hr width="100%;" color="red" size="5">
 
 <section class="section" id="other_profiles">
-    <h1 class="title">다른 프로필들</h1>
-    <div id="사람1">
+    <h1 class="title">크래프톤 5기 정글러들</h1>
+
+    {% for item in data.other_students %}
         <div>
             <div class="columns is-mobile" id="user_info">
                 <!-- 프로필 이미지 -->
                 <div class="column">
                     <figure class="image is-96x96">
-                        <img class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
+                        <img class="is-rounded" src="{{ item.cat_image_url }}" style="width: 96px; height: 96px;">
                     </figure>
                 </div>
                 <div class="column">
@@ -67,88 +68,28 @@
                     <div class="block">
                         <div class="tags has-addons">
                             <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">이름을 쓰는 공간 -> jinja 로 처리</span>
+                            <span class="tag is-info">{{ item.name }}</span>
                         </div>
-                    </div>
-
-                    <!-- 상태 -->
-                    <div class="control">
-
                     </div>
                 </div>
                 <div class="column">
                     <div class="tags has-addons">
                         <span class="tag is-dark">상태</span>
-                        <span class="tag is-info">상태를 쓰는 공간 -> jinja 로 처리</span>
+                        {% if item.location == "undefined" %}
+                            <span class="tag is-info">미정</span>
+                        {% elif item.location == "gym" %}
+                            <span class="tag is-info">헬스장</span>
+                        {% elif item.location == "restaurant" %}
+                            <span class="tag is-info">레스토랑</span>
+
+                        {% endif %}                        
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="사람2">
-        <div>
-            <div class="columns is-mobile" id="user_info">
-                <!-- 프로필 이미지 -->
-                <div class="column">
-                    <figure class="image is-96x96">
-                        <img class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
-                    </figure>
-                </div>
-                <div class="column">
-                    <!-- 이름 -->
-                    <div class="block">
-                        <div class="tags has-addons">
-                            <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">이름을 쓰는 공간 -> jinja 로 처리</span>
-                        </div>
-                    </div>
+    {% endfor %}
 
-                    <!-- 상태 -->
-                    <div class="control">
 
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="tags has-addons">
-                        <span class="tag is-dark">상태</span>
-                        <span class="tag is-info">상태를 쓰는 공간 -> jinja 로 처리</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="사람3">
-        <div>
-            <div class="columns is-mobile" id="user_info">
-                <!-- 프로필 이미지 -->
-                <div class="column">
-                    <figure class="image is-96x96">
-                        <img class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
-                    </figure>
-                </div>
-                <div class="column">
-                    <!-- 이름 -->
-                    <div class="block">
-                        <div class="tags has-addons">
-                            <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">이름을 쓰는 공간 -> jinja 로 처리</span>
-                        </div>
-                    </div>
-
-                    <!-- 상태 -->
-                    <div class="control">
-
-                    </div>
-                </div>
-                <div class="column">
-                    <div class="tags has-addons">
-                        <span class="tag is-dark">상태</span>
-                        <span class="tag is-info">상태를 쓰는 공간 -> jinja 로 처리</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </section>
 
 <footer class="footer">
