index 페이지 UI 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,11 @@
         </div>
     </section>
     <section class="section is-medium">
-        <h1 class="title">그림영역</h1>
-        <a class="button" href="/login/form">시작하기</a>
+        <div
+            style="background-image: url('/static/뚱냥이.png');height: 400px; width: 400px; background-size: contain;background-repeat: no-repeat; background-position: center;">
+            <a class="button" href="/login/form">시작하기</a>
+        </div>
+
 
     </section>
     <footer class="footer">
