프로필 변경시 프로필사진 올라오도록 변경

--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -39,6 +39,7 @@
                 },
                 success: function(response){
                     alert("프로필 수정완료!");
+                    location.href = "/state"
                 },
                 error: function(response) {
                     if (response.status == '422') {
