--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -175,7 +175,7 @@
                 <!-- 프로필 이미지 -->
                 <div class="column">
                     <figure class="image is-96x96">
-                        <img style="width: 96px;height: 96px;" id="profile_img" class="is-rounded" src="https://bulma.io/images/placeholders/96x96.png">
+                        <img style="width: 96px;height: 96px;" id="profile_img" class="is-rounded" src= {{ data.my_profile.cat_image_url }}>
                     </figure>
                 </div>
                 <div class="column is-two-thirds tags are-normal">
