--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -8,47 +8,46 @@
 
     <!-- JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script>
-        function change_profile(){
+        function change_profile() {
             $.ajax({
-                type : "GET",
-                url : "https://api.thecatapi.com/v1/images/search",
+                type: "GET",
+                url: "https://api.thecatapi.com/v1/images/search",
                 data: {},
-                success: function(response){
+                success: function (response) {
                     let img_url = response[0]["url"];
-                    $("#profile_img").attr("src",img_url);
+                    $("#profile_img").attr("src", img_url);
                 }
             })
         }
 
-        function change(){
+        function change() {
             let loc = $("#loc_select option:selected").text();
             console.log(loc);
 
             let img_url = $("#profile_img").attr("src");
 
             $.ajax({
-                type : "POST",
-                url : "/state/update",
-                data: {"location":loc,"cat_image_url":img_url},
-                beforeSend: function(xhr) {
+                type: "POST",
+                url: "/state/update",
+                data: { "location": loc, "cat_image_url": img_url },
+                beforeSend: function (xhr) {
                     const token = localStorage.getItem('access_token');
                     xhr.setRequestHeader('Authorization', 'Bearer ' + token);
                 },
-                success: function(response){
+                success: function (response) {
                     alert("프로필 수정완료!");
                     location.href = "/state"
                 },
-                error: function(response) {
+                error: function (response) {
                     if (response.status == '403') {
-                            alert('로그인이 필요합니다.');
-                            location.href = '/login/form';
+                        alert('로그인이 필요합니다.');
+                        location.href = '/login/form';
                     }
                 }
             })
-            
+
         }
     </script>
 
@@ -59,20 +58,21 @@
 </body>
 
 <script>
+    // 정글러들 상태 불러오기
     document.addEventListener('DOMContentLoaded', () => {
         $.ajax({
             type: "GET",
             url: "/state/list",
-            data: {},        
-            beforeSend: function(xhr) {
+            data: {},
+            beforeSend: function (xhr) {
                 const token = localStorage.getItem('access_token');
                 xhr.setRequestHeader('Authorization', 'Bearer ' + token);
             },
-            success: function(response) {
+            success: function (response) {
                 document.querySelector('#container').innerHTML = response;
                 setModalState();
             },
-            error: function(response) {
+            error: function (response) {
                 if (response.status == '403') {
                     alert('로그인이 필요합니다.');
                     location.href = '/login/form';
@@ -82,6 +82,7 @@
 
     });
 
+    // 프로필 수정 로직
     function setModalState() {
         // Functions to open and close a modal
         function openModal($el) {
@@ -126,6 +127,24 @@
 
 
     }
+
+    // 로그아웃 로직
+    function logout() {
+        // 로컬 스토리지에서 JWT 삭제
+        localStorage.removeItem('access_token');
+
+
+        // 선택적: 서버에 로그아웃을 알리는 요청을 보낼 수 있음
+        $.ajax({
+            url: '/logout',
+            type: 'POST', // 서버 측 설정에 따라 GET도 가능
+            success: function (response) {
+                // 로그아웃 처리 후, 로그인 페이지로 리다이렉션
+                window.location.href = '/';
+            }
+        });
+    }
+
 </script>
 
 </html>
