--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -41,9 +41,14 @@
 
         <!-- 나의 프로필 변경 페이지를 뜨게 하는 버튼 -->
         <button class="button is-primary js-modal-trigger" data-target="update_user_profile">
-            나의 프로필 변경하기
+            프로필 변경
+        </button>
+        <!-- 로그아웃 버튼 -->
+        <button class="button is-danger" id="logoutBtn" onclick="logout()">
+            로그아웃
         </button>
     </div>
+
 
 </section>
 
