--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -8,6 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
+  <link rel="icon" href="static/favicon.png">
   <title>어디냥 | 로그인</title>
 
   <!-- JS -->
