--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>어디냥 | 회원가입화면</title>
-
+    <link rel="icon" href="static/favicon.png">
     <!-- CSS library Bulma -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css">
 
@@ -25,18 +25,18 @@
                             <div class="field">
                                 <label for="" class="label">아이디</label>
                                 <div class="control has-icons-left">
-                                    <input name="id" type="text" placeholder="예: meow1234" class="input" >
+                                    <input name="id" type="text" placeholder="예: meow1234" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
                                 </div>
                             </div>
-                            
+
                             <!-- 이름 -->
                             <div class="field">
                                 <label for="" class="label">이름</label>
                                 <div class="control has-icons-left">
-                                    <input name="name" type="text" placeholder="예: 김냐옹" class="input" >
+                                    <input name="name" type="text" placeholder="예: 김냐옹" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -47,7 +47,7 @@
                                 <label for="" class="label">비밀번호</label>
                                 <div class="control has-icons-left">
 
-                                    <input name="password" type="password" placeholder="*******" class="input" >
+                                    <input name="password" type="password" placeholder="*******" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -57,7 +57,7 @@
                             <div class="field">
                                 <label for="" class="label">비밀번호확인</label>
                                 <div class="control has-icons-left">
-                                    <input type="password" placeholder="*******" class="input" >
+                                    <input type="password" placeholder="*******" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-lock"></i>
                                     </span>
@@ -67,7 +67,7 @@
                             <div class="field">
                                 <label for="" class="label">이메일</label>
                                 <div class="control has-icons-left">
-                                    <input name="email" type="email" placeholder="e.g. meow@gmail.com" class="input" >
+                                    <input name="email" type="email" placeholder="e.g. meow@gmail.com" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-envelope"></i>
                                     </span>
@@ -77,7 +77,7 @@
                             <div class="field">
                                 <label for="" class="label">전화번호</label>
                                 <div class="control has-icons-left">
-                                    <input name="phone" type="email" placeholder="e.g. : 01012345678" class="input" >
+                                    <input name="phone" type="email" placeholder="e.g. : 01012345678" class="input">
                                     <span class="icon is-small is-left">
                                         <i class="fa fa-envelope"></i>
                                     </span>
@@ -123,12 +123,12 @@
         const password = $('input[name="password"]').val();
         const email = $('input[name="email"]').val();
         const phone = $('input[name="phone"]').val();
-            
+
         $.ajax({
             type: "POST",
             url: "/signup",
-            data: {id, name, password, email, phone},
-            success: function(response) {
+            data: { id, name, password, email, phone },
+            success: function (response) {
                 if (response['status'] !== 'success') {
                     alert('회원가입에 실패하였습니다.')
                     return;
@@ -139,7 +139,7 @@
         })
 
     });
-    
+
 </script>
 
 </html>
