--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -115,9 +115,8 @@
   <footer class="footer">
     <div class="content has-text-left">
       <p>
-        <strong>"어디냥..."</strong> by 김세연, 최상욱, 황교준 from Krafton Jungle. The source code is licensed
-        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
-        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+        <strong>"어디냥..."</strong> by 김세연, 최상욱, 황교준 from Krafton Jungle.
+       
       </p>
     </div>
   </footer>
