--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -57,7 +57,11 @@
 <hr width="100%;" color="red" size="5">
 
 <section class="section" id="other_profiles">
-    <h1 class="title">크래프톤 5기 정글러들</h1>
+    <h1 class="title">
+        크래프톤 5기 정글러들
+        &nbsp;
+        <button class="button is-active" id="renew-data-btn">갱신</button>
+    </h1>    
 
     {% for item in data.other_students %}
         <div>
