--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -42,7 +42,6 @@
                 },
                 error: function (response) {
                     if (response.status == '403') {
-                        alert('로그인이 필요합니다.');
                         location.href = '/login/form';
                     }
                 }
@@ -64,17 +63,15 @@
             type: "GET",
             url: "/state/list",
             data: {},
-            beforeSend: function (xhr) {
-                const token = localStorage.getItem('access_token');
-                xhr.setRequestHeader('Authorization', 'Bearer ' + token);
+            headers: {
+                'Authorization': 'Bearer ' + localStorage.getItem('access_token')
             },
             success: function (response) {
                 document.querySelector('#container').innerHTML = response;
                 afterRendering();
             },
             error: function (response) {
-                if (response.status == '403') {
-                    alert('로그인이 필요합니다.');
+                if (response.status == '403') {                    
                     location.href = '/login/form';
                 }
             }
