fix: 타 수강생 정보 새로고침 버그 수정

--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -97,7 +97,7 @@
                     xhr.setRequestHeader('Authorization', 'Bearer ' + token);
                 },
                 success: function(response){      
-                    const section = document.querySelector('#container #other_profiles div');
+                    const section = document.querySelector('#container #other_profiles #list_box');
                     section.innerHTML = response;
                 },
                 error: function(response) {
