--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -62,7 +62,7 @@
         &nbsp;
         <button class="button is-active" id="renew-data-btn">갱신</button>
     </h1>    
-
+    <div id="list_box">
     {% for item in data.other_students %}
         <div>
             <div class="columns is-mobile" id="user_info">
@@ -104,6 +104,7 @@
             </div>
         </div>
     {% endfor %}
+    </div>
 </section>
 
 <footer class="footer">
