--- a/templates/index.html
+++ b/templates/index.html
@@ -16,16 +16,19 @@
 
             // 'imageContainer' div에 대한 참조를 가져옵니다.
             var imageContainer = document.getElementById('imageContainer');
+            var container = document.getElementById('container');
 
 
             // '너의' 버튼 클릭 이벤트 리스너
             yourButton.addEventListener('click', function () {
                 imageContainer.style.backgroundImage = "url('/static/뚱냥이.png')";
+                container.style.backgroundColor = "white";
             });
 
             // '위치는?' 버튼 클릭 이벤트 리스너
             locationButton.addEventListener('click', function () {
                 imageContainer.style.backgroundImage = "url('/static/cat.jpeg')";
+                container.style.backgroundColor = "black";
             });
         });
 
@@ -33,24 +36,26 @@
 </head>
 
 <body>
-    <section class="hero is-primary">
-        <div class="hero-body">
-            <p class="title">
-                어디냐옹
-            </p>
-            <p class="subtitle">
-                정글러들의 위치를 확인하기 위한 서비스
-            </p>
-        </div>
-    </section>
-    <section class="section is-medium">
-        <a class="button is-link" id="startButton" href="/login/form">시작하기</a>
-        <a class="button is-info" id="yourButton">너의</a>
-        <a class="button is-success" id="locationButton">위치는?</a>
-        <div id="imageContainer"
-            style="height: 400px; width: 400px; background-size: contain; background-repeat: no-repeat; background-position: center;">
-
-        </div>
+    <div id ="container" style="background-color: white;">
+        <section class="hero is-primary">
+            <div class="hero-body">
+                <p class="title">
+                    어디냐옹
+                </p>
+                <p class="subtitle">
+                    정글러들의 위치를 확인하기 위한 서비스
+                </p>
+            </div>
+        </section>
+        <section class="section is-medium">
+            <a class="button is-link" id="startButton" href="/login/form">시작하기</a>
+            <a class="button is-info" id="yourButton">너의</a>
+            <a class="button is-success" id="locationButton">위치는?</a>
+            <div id="imageContainer"
+                style="background-image: url('/static/뚱냥이.png'); height: 400px; width: 400px; background-size: contain; background-repeat: no-repeat; background-position: center;">
+    
+            </div>
+    </div>
 
 
     </section>
