--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -61,6 +61,7 @@
         크래프톤 5기 정글러들
         &nbsp;
         <button class="button is-active" id="renew-data-btn">갱신</button>
+        <button class="button is-loading is-hidden" id="loading">로딩</button>
     </h1>    
     <div id="list_box">
     {% for item in data.other_students %}
