--- a/templates/show_profile.html
+++ b/templates/show_profile.html
@@ -10,14 +10,27 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" crossorigin="anonymous"></script>
     <script>
-        function change_profile() {
+
+        function change_profile() {    
+            const changeBtn = document.querySelector('#change-btn');
+            changeBtn.disabled = false;
+            
+            const skeletonImg = document.querySelector('#skeleton-img');
+            skeletonImg.classList.remove('is-hidden');
+            const realImg = document.querySelector('#real-img');
+            realImg.classList.add('is-hidden');
+            
             $.ajax({
                 type: "GET",
                 url: "https://api.thecatapi.com/v1/images/search",
                 data: {},
-                success: function (response) {
+                success: function (response) {                                
                     let img_url = response[0]["url"];
                     $("#profile_img").attr("src", img_url);
+                    setTimeout(() => {
+                        skeletonImg.classList.add('is-hidden');                    
+                        realImg.classList.remove('is-hidden');    
+                    }, 2000);                    
                 }
             })
         }
@@ -81,8 +94,17 @@
 
     function afterRendering() {
         addRenewalEvent();
+        addSelectBoxChangeEvent();
         setModalState();
 
+    }
+
+    function addSelectBoxChangeEvent() {
+        const selectBox = document.querySelector('#loc_select');
+        selectBox.addEventListener('change', ()=> {
+            const changeBtn = document.querySelector('#change-btn');
+            changeBtn.disabled = false;
+        });
     }
 
     function addRenewalEvent() {
