--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -25,7 +25,7 @@
                 <div class="block">
                     <div class="tags has-addons">
                         <span class="tag is-dark">이름</span>
-                        <span class="tag is-info">{{ data.my_profile.name }}</span>
+                        <span class="tag is-info is-light">{{ data.my_profile.name }}</span>
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                     <div class="block">
                         <div class="tags has-addons">
                             <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">{{ item.name }}</span>
+                            <span class="tag is-info is-light">{{ item.name }}</span>
                         </div>
                     </div>
                 </div>
@@ -133,7 +133,7 @@
                     <div class="block">
                         <div class="tags has-addons">
                             <span class="tag is-dark">이름</span>
-                            <span class="tag is-info">{{data.my_profile.name}}</span>
+                            <span class="tag is-info is-light">{{data.my_profile.name}}</span>
                         </div>
                     </div>
 
