--- a/templates/show_profile_data.html
+++ b/templates/show_profile_data.html
@@ -33,7 +33,7 @@
                 <div class="control">
                     <div class="tags has-addons">
                         <span class="tag is-dark">상태</span>
-                        <span class="tag is-info"> {{ data.my_profile.location }} </span>
+                        <span class="tag {{data.my_location}}"> {{ data.my_profile.location }} </span>
                     </div>
                 </div>
             </div>
@@ -141,7 +141,7 @@
                     <div class="control">
                         <div class="tags has-addons">
                             <span class="tag is-dark">위치</span>
-                            <span class="tag is-info">{{data.my_profile.location}}</span>
+                            <span class="tag {{data.my_location}}">{{data.my_profile.location}}</span>
                         </div>
                     </div>
                 </div>
